--- a/report/assignment1.tex
+++ b/report/assignment1.tex
@@ -17,7 +17,6 @@
 \usepackage{multirow}
 \usepackage{array}
 \usepackage{url}
-\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
 
 \author{
 Thomas Nedelec \\
@@ -98,8 +97,10 @@ To reach the conditions for optimality, we set the previous equation to zero and
 w=(\gamma l Id +X^{T}X)^{-1}Y^{T}X
 \end{equation}
 because if $\gamma*l \ne 0$ $(\gamma l Id +X^{T}X)$ is non-singular.
-\\\gamma l Id +X^{T}X is symetric.
-\\ We consider $u \in \mathbb{R}^{d}$:
+
+$\gamma l Id +X^{T}X $ is symetric.
+
+We consider $u \in \mathbb{R}^{d}$:
 \begin{align*}
 \langle (\gamma l Id +X^{T}X)u,u \rangle &= \langle \gamma l u,u \rangle + \langle X^{T}X,u \rangle
 \\  &= \gamma l \langle  u,u \rangle + \langle X u, X u \rangle
@@ -120,11 +121,11 @@ Thus $\gamma l Id +X^{T}X$ is definite positve.
 First, the graph shows that if gamma is too high, the training error and test error increase dramatically. It is intuitive because when gamma is high the algorithm is far more likely to minimize $||w||$  rather than the training error.
 
 
-\\We have an optimal point corresponding to inflection point of the curve in order to select $\gamma$. Nevertheless, the training set error is not a sufficiently good guidance to select the regularization parameter because the charts are quite different. 
+We have an optimal point corresponding to inflection point of the curve in order to select $\gamma$. Nevertheless, the training set error is not a sufficiently good guidance to select the regularization parameter because the charts are quite different. 
 
-\\However, when we average the training error on 200 runs, we can observe that now the test error and the training error are now almost identical.
+However, when we average the training error on 200 runs, we can observe that now the test error and the training error are now almost identical.
 
-\\A way to select the optimal $\gamma$ would be to plot the error on the training set averaged on a certain number of runs of the algorithm and select the optimal $\gamma$ on this curve. 
+A way to select the optimal $\gamma$ would be to plot the error on the training set averaged on a certain number of runs of the algorithm and select the optimal $\gamma$ on this curve. 
 
 
 \section{Tuning the regularization parameter using a validation set}
