ex5 add some figures

--- a/report/assignment1.tex
+++ b/report/assignment1.tex
@@ -155,6 +155,20 @@ Figure \ref{fig:ex4_10} shows ..............
 
 
 \section{Tuning the regularization parameter using a validation set}
+ \begin{figure}[h]
+\center
+ \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{5_100}
+        \caption{XXX}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.45\textwidth}
+        \includegraphics[width=\textwidth]{5_10}
+        \caption{XXX}
+    \end{subfigure}
+    \caption{XXXX.}
+    \label{fig:ex5}
+\end{figure}
+
 
 \section{Tuning the regularization parameter using cross valdidation}
 We use 5-fold cross validation to tune the regularization parameter. Figure \ref{fig:ex6} shows cross-validation score on top of the training and test set error for different values $\gamma = \{10^{-6}, 10^{-5}, \dots, 10^3 \}$ of the regularization parameter.
