--- a/report/assignment1.tex
+++ b/report/assignment1.tex
@@ -45,7 +45,7 @@ MSc Machine Learning\\
 \maketitle
 
 \section{Exercise 1: Least Square Regression: effect of the training set size}
-We generated a noisy random data set, containing 600 samples, as $y_i = x_i'w + n_i$, where each $x_i$ and $n_i$ are drawn from the standard normal distribution. We splitted the data into a training set of size 100 a test set of size 500. We compute the mean squared error on both the training and test sets. Figure \ref{fig:lsr} shows examples of different training sets and estimated regression $w$.
+We generated a noisy random data set, containing 600 samples, as $y_i = x_i'w + n_i$, where each $x_i$ and $n_i$ are drawn from the standard normal distribution. We splited the data into a training set of size 100 a test set of size 500. We train a linear regression model by Least Square Regression. To evaluate the model, we compute the mean squared error on both the training and test sets. Figure \ref{fig:lsr} shows examples of different training sets and estimated regression $w$.
 
  \begin{figure}[h]
 \center
@@ -56,42 +56,44 @@ We generated a noisy random data set, containing 600 samples, as $y_i = x_i'w + 
 \label {fig:lsr}
 \end{figure} 
 
-Figure \ref{fig:resultMatrix1} illustrates the ''2 x 2'' table of averages mean square error for both training and test sets, on both 10 and 100 element-size training set.
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.4\textwidth]{resultsMatrix}
-\end{center}
-\caption{Average mean square error for both training and test sets, on both 10 and 100 element-size training set.}
+\includegraphics[width=0.3\textwidth]{resultsMatrix}
+\caption{Average mean square error for both training and test sets, on both 10 and 100 element-size training set with running 200 times the algorithm.}
 \label{fig:resultMatrix1}
+\end{center}
 \end{figure}
 
-We can observe that increasing the size of training set lets to decrease the average mean error on the test set. It's because, the larger training set prevents us from overfitting our model and give us a better overview of data. 
-However, it increased the average mean error on train set.
-With increasing the size of training set, the average error on the test and train set became similar. The average error on test set is larger than on train set. It is clear, because we have seen the train data before and haven't seen the test data.
+
+Figure \ref{fig:resultMatrix1} illustrates the ''2 x 2'' table of averages mean square error for both training and test sets, on both 10 and 100 element-size training set. The average mean square run is computed with running 200 times the algorithm. 
+\\
+We can observe that increasing the size of training set lets to decrease the average mean error on the test set. Indeed, a larger training set lets us to have more information on the distribution and lets to a better generalization of the model. With a small dataset, we do not have enough points to predict well datas in the test set.  
+However, it increased the average mean error on train set because it is harder to have a line explaining all the data points.
+With increasing the size of training set, the average error on the test and train set becomes similar: the train set is big enough to predict well the test set. The average error on test set will remain a little bit higher than on the train set: normal because it is easy to predict the values of the training set: we have already seen them.
 
 \section{Exercise 2: Least Square Regression: effect of dimensionality}
-We repeated the task in exercise 1, but with 10-dimensional data sets. Figure \ref{fig:resultMatrix2} illustrates the ''2 x 2'' table of averages mean square error for both training and test sets, on both 10 and 100 element-size training set.
+We repeated the task of exercise 1, but with 10-dimensional data sets. Figure \ref{fig:resultMatrix2} illustrates the ''2 x 2'' table of averages mean square error for both training and test sets, on both 10 and 100 element-size training set.
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.4\textwidth]{resultsMatrix2}
 \end{center}
-\caption{Average mean square error for 10-dimensional data for both training and test sets, on both 10 and 100 element-size training set.}
+\caption{Average mean square error for 10-dimensional data for both training and test sets, on both 10 and 100 element-size training set with running 200 times the algorithm.}
 \label{fig:resultMatrix2}
 \end{figure}
 
-For 10-sample training set, we obtain the average mean square error $0$ for train set and $2505.1$ for test set. We have 10-dimensional data and 10 samples, so we can accurately predict $y_i$ without any errors. However, the prediction is overfitted to the training data and we have a large error for test set. Increasing number of samples to 100 helps to decrease average error on test set. Average error for train set is bigger than for 10 samples, but our goal is to decrease test error.
+For 10-sample training set, we obtain the average mean square error $0$ for train set and $2505.1$ for test set. We have 10-dimensional data and 10 samples, so we can accurately predict $y_i$ without any errors. However, the prediction is overfitted to the training data and we have a large error for test set. Increasing number of samples to 100 helps to decrease average error on test set because the biggest size of the training set lets to a better generalization ability. Average error for train set is not anymore 0 because we can't find a space of dimension 10 containing 100 points (except if they only form a 10-dimension space of course).
 
-\section{Ridge regression}
+\section{Exercise 3: Ridge regression}
 
 The regularization is a way to reduce the freedom of the classifier in order to improve the generalization and reach a better test set average error. 
 \\ To implement ridge regression, we would like to minimize according to \textit{w} the cost function, 
-\begin{equation}
+\begin{equation*}
 \gamma w^{T}w + \frac{1}{l} \sum_{i=1}^{l}(x_{i}^{T}w - y_{i})^{2}.
-\end{equation}
+\end{equation*}
 Using the notation $X=(x_{1}, x_{2},...,x_{l})^{T}$, a matrix containing the training sample vectors as its rows, we can rewrite the cost function as: 
-\begin{equation}
+\begin{equation*}
 \gamma w^{T} w + \frac{1}{l} Tr((Xw - Y)^{T}(Xw - Y))
-\end{equation}
+\end{equation*}
 Taking derivative according to w, we reach: 
 \begin{equation}
 2\gamma w + 2 \frac{1}{l} (X^{T}Xw - 2Y^{T}X)=0
@@ -100,7 +102,7 @@ To reach the conditions for optimality, we set the previous equation to zero and
 \begin{equation}
 w=(\gamma l Id +X^{T}X)^{-1}Y^{T}X
 \end{equation}
-because if $\gamma*l \ne 0$ $(\gamma l Id +X^{T}X)$ is non-singular.
+because if $\gamma*l \ne 0$, $(\gamma l Id +X^{T}X)$ is non-singular.
 
 $\gamma l Id +X^{T}X $ is symetric.
 
@@ -149,11 +151,11 @@ Figure \ref{fig:ex4_10} shows the training error and test error in function of g
     \caption{Evaluation of the training error and test error in function of gamma for 10 training samples.}
     \label{fig:ex4_10}
 \end{figure}
-It looks different than for 100 training samples. Regularization prevented model from overfitting. The test error decreased with increasing regularization parameter until it reached the minimal value for $\gamma = 10^{-1}$. 
+It looks different than for 100 training samples. Regularization prevented model from overfitting. The test error decreased with increasing regularization parameter until it reached the minimal value for $\gamma = 10^{-1}$. Basically trying to train a regression in dimension 10 with 10 points does not mean a lot of things. However, we can notice some interesting things. 
 
-Regularization prevents algorithm to overfit to data set. However, it is difficult to choose the optimal value of regularization parameter $\gamma$ by minimizing the training error, because it's almost always have the minimum error for $\gamma = 0$. We don't have access to the test set, so we can only use information about error on training set. In our opinion, we can find optimal value of $\gamma$ by looking the biggest value of $\gamma$, which doesn't dramatically increase training error.
+Regularization prevents algorithm to overfit the data set. In the case of 10 points, it is difficult to choose the optimal value of regularization parameter $\gamma$. Minimizing according to gamma would lead in this case to not take into account the data and choose w=0. T
 
-This exercise also shows that it is easier to overfit model for smaller data set than for bigger one and the regularization becomes less important for big data sets.
+The most important thing of this part is to see that with a reasonable size of data set there exists an optimal gamma that lets to lead to a good generalization ability. 
 
 \section{Tuning the regularization parameter using a validation set}
 The goal of this exercise is to use a validation set to tune the regularization parameter for training set with 10 and 100 samples. Figure \ref{fig:ex5} shows the result error on training, validation and test sets for both data sets.
@@ -171,24 +173,24 @@ The goal of this exercise is to use a validation set to tune the regularization 
     \label{fig:ex5}
 \end{figure}
 
-For 100 sample data set, the averaged validation error is almost identical as averaged test error, so it is a good approximation of test set. 
+For 100 sample data set, the averaged validation error is almost identical as averaged test error, so it is a good approximation of the error on the test set. The drawback of this method is that we are losing information on the training data because we are only considering 4/5 of the data available to train our regression. 
 
-The averaged $\gamma$ for 200 experiments are : $\gamma^{(100)} = 0.0417 $ and  $\gamma^{(10)} = 50.1787$. The averaged  $\gamma^{(10)}$ is much bigger than  $\gamma^{(100)}$. It is because the size of training set is very small and it's very prone to overfitting. Notice that we the training set has only 8 samples and the dimension is 10, so we have less data than dimensions. The high regularization parameter prevent overfitting.
+The averaged best $\gamma$ on the validation set for 200 experiments are : $\gamma^{(100)} = 0.0417 $ and  $\gamma^{(10)} = 50.1787$. The averaged  $\gamma^{(10)}$ is much bigger than  $\gamma^{(100)}$. It is still because with only 10 points, ridge regression just leads to not take into account the training data. Notice that the training set has only 8 samples and the dimension is 10, so we have even less points than dimensions.
 
 We performed RR on the full training set with 100 samples selecting the regularization parameter that gives rise to the smallest validation set error.Training error and validation error are equal to $0.2027$ and $3.2162$ respectively for 10 sample set and   $0.8513$ and $1.1106$  for 100 sample set. It's obvious that for bigger training set we reached better results.
 
-It is better to tune regularization parameter on validation set, which is independent from training set.
+It is better to tune regularization parameter on validation set, which is independent from training set but we are losing information compare to having access to the full training set. That is why we need to introduce cross-validation. 
 
 \section{Tuning the regularization parameter using cross validation}
 We use 5-fold cross validation to tune the regularization parameter. Figure \ref{fig:ex6} shows cross-validation score on top of the training and test set error for different values $\gamma = \{10^{-6}, 10^{-5}, \dots, 10^3 \}$ of the regularization parameter.
 
 \begin{figure}[h]
     \centering
-    \begin{subfigure}[b]{0.45\textwidth}
+    \begin{subfigure}[b]{0.3\textwidth}
         \includegraphics[width=\textwidth]{ex6_10}
         \caption{10-sample training set}
     \end{subfigure}
-    \begin{subfigure}[b]{0.45\textwidth}
+    \begin{subfigure}[b]{0.3\textwidth}
         \includegraphics[width=\textwidth]{ex6_100}
         \caption{100-sample training set}
     \end{subfigure}
@@ -196,7 +198,9 @@ We use 5-fold cross validation to tune the regularization parameter. Figure \ref
     \label{fig:ex6}
 \end{figure}
 
-Cross validation error is a good estimation of error for test set for both 10 and 100 samples. 
+\newpage
+Cross validation error is a good estimation of error for test set for both 100 samples and we do not lose anymore data in the training set. 
+
 
 
 \section{Comparison of  $\gamma$ tuning methods}
@@ -220,8 +224,7 @@ The goal of this exercise is to generate 200 such data as in above exercises and
 \end{itemize}
 \end{enumerate}
 
-The best results gives tunning regularization by minimizing the 5-fold cross validation error. Our model has only 10 samples and it's very prone to overfitting, so tunning the regularization parameter is very important in this case. Minimizing the 5-fold cross validation error gives us reasonable results despite the fact that training set is very small. Minimizing the training error doesn't seem to be a good approach, because the test set error and  standard deviation of error are very big. Using only one validation set gives us better results but still not such good as using cross validation method.
-
+The best results gives tuning regularization by minimizing the 5-fold cross validation error. Minimizing the 5-fold cross validation error gives us reasonable results despite the fact that training set size is very small. Minimizing the training error doesn't seem to be a good approach, because the test set error and  standard deviation of error are very big. Indeed we do not have enough information to hope to predict well on the test set. Using only one validation set gives us better results but still not such as good as using cross validation method. Indeed in the validation set method, we are losing information compare to cross-validation methods.
 
 The results of average test error and standard deviation of the errors for 100 sample set-up are presented below:
 
@@ -242,26 +245,29 @@ The results of average test error and standard deviation of the errors for 100 s
 \item Standard deviation of error: $0.0848$
 \end{itemize}
 \end{enumerate}
-First of all, the results are much better than for 10 sample set-up, but is is because we increase training set. Secondly,  differences between results for each method are very small. It's because, we have a big enough train set and regularization isn't really necessary. The model isn't prone to overfitting. 
+First of all, the results are much better than for 10 sample set-up. We increased the size of the training set and now our model has a good generalization ability. Secondly,  differences between results for each method are very small. It's because, we have a big enough train set and regularization isn't really necessary. We still can notice that cross validation is better than validation because thanks to cross-validation we do not need to loose information compare to cross-validation. 
 
 \section{Load the data}
 We loaded the boston data set into Matlab.
 \section{Baseline versus full linear regression.}
-In this exercise we try a baseline method works for a problem instead of use all of our attributes for prediction. Firstly, we implemented Naive Regression, which predict with the mean y-value on the training set. The averaged training and test errors (after 20 runs) are equal to $ 84.5706$ and $84.3933$ respectively. Then Linear Regression with single attributes was implemented. For each of the thirteen attributes, we performed a linear regression using only the single attribute but incorporating a bias term. Results are shown in figure \ref{fig:res}. 
+In this exercise we try a baseline method works for a problem instead of use all of our attributes for prediction. Firstly, we implemented Naive Regression, (approach whose name is well chosen..) which predicts with the mean y-value on the training set. The averaged training and test errors (after 20 runs) are equal to $ 84.5706$ and $84.3933$ respectively. 
 
-In general, results are better than for Naive Regression, but they depends on which attribute we selected. It means that some attributes are more important (have more information that we can use to distinguish classes) that others. For example, Linear Regression with 13th attribute has error on test set: $39.1051$ in contrast to with 4th attribute: $83.5478$. 
+Then Linear Regression with single attributes was implemented. For each of the thirteen attributes, we performed a linear regression using only the single attribute but incorporating a bias term. Results are shown in figure \ref{fig:res}. 
 
-Linear Regression using all attributes outperforms any of the individual regressors (MSE on test set: $27.8889$.
+In general, results are better than for Naive Regression, but they depend on which attribute we selected. It means that some attributes are more important (have more information that we can use to distinguish classes) that others. For example, Linear Regression with 13th attribute has error on test set: $39.1051$ in contrast to with 4th attribute: $83.5478$. 
 
+Linear Regression using all attributes outperforms obviously any of the individual regressors (MSE on test set: $27.8889$.
 
 
 \section{Kernel Ridge Regression}
 In this exercise we will perform kernel ridge regression on the Boston data set with the Gaussian kernel, which is defined as:
-\begin{equation}
+\begin{equation*}
 K(x_i,x_j) = exp(-\frac{|| x_i - x_j||^2}{2 \sigma^2})
-\end{equation}
+\end{equation*}
 
-We created a function \textit{kridgereg.m} to perform kernel ridge regression using equation $\alpha^* = (K + \gamma l I_l)^{-1}y$. We don't explicitly use a matrix inverse instead use the matrix left division operator. According to the Matlab documentation, \textit{mldivide} is a more efficient way to solve a linear equation $Ax = b$. If the solution does not exist or if it is not unique, the  \textit{mldivide} operator issues a warning.
+First, we compute the kernel matrix for all the data (when we implement cross-validation we select indexes which are meaningful for the training set and validation set). 
+
+Then, we used \textit{kridgereg.m} to perform kernel ridge regression using equation $\alpha^* = (K + \gamma l I_l)^{-1}y$. We don't explicitly use a matrix inverse instead use the matrix left division operator. According to the Matlab documentation, \textit{mldivide} is a more efficient way to solve a linear equation $Ax = b$. If the solution does not exist or if it is not unique, the  \textit{mldivide} operator issues a warning.
 
 Then, we created a function called \textit{dualcost.m} to calculate the Mean Squared Error (MSE) using equation:
 \begin{equation}
@@ -307,8 +313,39 @@ Then, we repeat those steps over 20 random splits of data. Our results for exerc
 \end{tabular}
  \label{fig:res}
 \end{center}
+\section{Part 2}
+\subsection{Simulating \texitt{1-Nearest Neighbor classifier} with Linear Classifier}
 
-\section*{Part 2}
-\subsection*{1}
+According to the previous part, 
+\begin{equation*}
+\alpha^{*}=(K+\gamma*l*I_{l})^{-1}y
+\end{equation*}
+If $\beta$ is big, $K_{\beta}(x,t)=exp(-\beta*||x-t||^2)=0$ if x is very different from t and not equal to zero if x is close from t. If $\beta$ is really too big everything is equal to if x different from t. Thus, there is an optimal beta to try to consider the closest point with a linear classifier.
+
+\subsection{Using a perceptron to learn a linear classifier with a bias}
+\begin{equation*}
+f_{w,b}(x)=sign(w^{T}x+b)
+\end{equation*}
+To learn also the bias, we use the algorithm presented in different articles: 
+\begin{algorithm} [H]
+\caption{Perceptron}
+\\Input $D: training set, maxIter, learningRate$ 
+\begin{algorithmic} [1]
+\State $w_d\gets 0$
+\\initialize w=0, $b_{0}=0$, k=0
+\\$R=max\{||x_{i}||, 1 \leq i \leq l\}$
+ \\While mistakes are made in the for loop repeat:
+ \For{$iter = 1 \dots l$}
+		\If {$y_{i}(w_{k}^{T}x_{i}+b_{k}  \le 0$} 
+   		     \State $w_{k+1}=w_{k}+\eta*y_{i}x_{i}$
+		     \State $b_{k+1}=b_{k}+\eta*y_{i}R^{2}$
+		     \State k=k+1
+  		 \EndIf
+	 \EndFor
+ \EndFor
+ \State\Return{ $w_d$}
+\end{algorithmic}
+\end{algorithm}
+
 
 \end{document}
